--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ six==1.16.0
 soupsieve==2.6
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
-tensorflow==2.18.0
+pip install tensorflow==2.18.0 --no-deps
 tensorflow_intel==2.18.0
 termcolor==2.5.0
 tf_keras==2.18.0
